Fix deprecated URL constructors, unused code, and runtime issues
- Replace deprecated URL(URL, String) with URI.resolve().toURL() in multiple files
- Remove unused imports, fields, and methods
- Add bounds check in DataContainerCompressable to prevent IndexOutOfBoundsException
- Fix ClassCastException in SpaceVectorDisplay by using Number.floatValue()
- Remove TODO comment in CodeWindow