@@ -25,6 +25,7 @@ import java.awt.GridLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.KeyEvent;
+import java.net.URI;
 import java.net.URL;
 import javax.swing.*;
 
@@ -42,7 +43,8 @@ public final class DialogLabelEingeben extends JDialog {
     public DialogLabelEingeben(final TerminalInterface terminal) {
         super(GeckoSim._win, true);
         try {
-            this.setIconImage(new ImageIcon(new URL(GlobalFilePathes.PFAD_PICS_URL, "gecko.gif")).getImage());
+            URL picsUrl = GlobalFilePathes.PFAD_PICS_URL;
+            this.setIconImage(new ImageIcon(picsUrl.toURI().resolve("gecko.gif").toURL()).getImage());
         } catch (Exception e) {
             e.printStackTrace();
         }
